Fix bug where submit messages were not showing up after first message was sent.

--- a/stacksy/app/assets/stylesheets/styles.css.scss
+++ b/stacksy/app/assets/stylesheets/styles.css.scss
@@ -37,8 +37,6 @@ header{
 h1 {
   font-size: 100px;
   font-family: 'Pacifico', cursive;
-  /*font-family: 'Lobster', cursive;*/
-  /*font-family: 'Lobster Two', cursive;*/
   color: #FF6000;
 }
 
@@ -62,6 +60,11 @@ svg {
 
 .special {
   font-family: 'Libre Baskerville', serif;
+}
+
+.hightlight {
+  background-color: red;
+  font-family: 'Pacifico', cursive; 
 }
 
 
